@@ -1,3 +1,9 @@
+2008-10-25  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* GuiRunner.cs: Implement IIgnoreList explicitly instead of implicitly
+	* Wizard.cs: Change visibility of PreAssemblyUpdate and PostTypeUpdate
+	to internal.
+
 2008-10-21  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Wizard.cs: Change logic to activate rules so it can be reused
